--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,8 @@
             <div class="contact-text">
                 <h1>Contact Me</h1>
                 <div>&#8205;</div>
-                <span>Email ID: </span>
-                <span>Phone Number: </span>
+                <span>Email ID: sharma4prerit06@gmail.com</span>
+                <span>Phone Number: +91-8076546579</span>
             </div>
         </div>
 
