--- a/about.html
+++ b/about.html
@@ -40,14 +40,15 @@
 
         <div class="slide-down">
             <h1>About Me</h1>
-            <div>Hey! I'm an 18 yo aspiring developer as</div>
-            <div> I have always loved the idea of coding and </div>
-            <div>decided to take up CS50x by Harvard, as many </div>
-            <div>have said "Nothing screams fundamentals more than </div>
-            <div>cs50x by harvard" and now, i can say the same.</div>
-            <div>I am currently just about to join my university,</div>
-            <div>and i can finally embark on my coding journey.</div>
-            <div> Wish me luck!</div>
+                Hey! I'm an 18 yo aspiring developer and entrepreneur as<br>
+                I have always found programming intriguing but i have always <br>
+                loved the idea of, and wanted to build a startup of my own, <br>
+                and solve an actual real world problem, which made me join my <br>
+                current university, Delhi Technological University, in the branch <br>
+                CSE, which leads me to do both of the things that i love - Learn <br>
+                coding and with the startup culture in it, work to make my startup<br>
+                culture a reality.<br>
+                Wish me luck!</div>
             <hr>
             <div>
                 <div>
