--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 
         <div class="slide-down">
             <h1>About Me</h1>
-                Hey! I'm an 18 yo aspiring developer and entrepreneur as<br>
+            <div> Hey! I'm an 18 yo aspiring developer and entrepreneur as<br>
                 I have always found programming intriguing but i have always <br>
                 loved the idea of, and wanted to build a startup of my own, <br>
                 and solve an actual real world problem, which made me join my <br>
