--- a/about.html
+++ b/about.html
@@ -46,8 +46,7 @@
                 and solve an actual real world problem, which made me join my <br>
                 current university, Delhi Technological University, in the branch <br>
                 CSE, which leads me to do both of the things that i love - Learn <br>
-                coding and with the startup culture in it, work to make my startup<br>
-                culture a reality.<br>
+                coding and work to make my startup dream a reality.<br>
                 Wish me luck!</div>
             <hr>
             <div>
