--- a/about.html
+++ b/about.html
@@ -47,8 +47,9 @@
                 current university, Delhi Technological University, in the branch <br>
                 CSE, which leads me to do both of the things that i love - Learn <br>
                 coding and work to make my startup dream a reality.<br>
-                Wish me luck!</div>
+                Wish me luck!</div> <br>
             <hr>
+            <br>
             <div>
                 <div>
                     <a href="projects.html">
