--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <link href="styles.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="scripts.js"></script>
-        <title>My Webpage</title>
+        <title>Prerit</title>
 
     </head>
     <body>
