--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
         <link href="styles.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="scripts.js"></script>
-        <title>My Webpage</title>
+        <title>Prerit</title>
 
     </head>
     <body>
@@ -40,10 +40,13 @@
 
         <div class="container">
             <div class="contact-text">
-                <h1>Contact Me</h1>
-                <div>&#8205;</div>
+                <h1 class="header">Contact Me</h1>
                 <span>Email ID: sharma4prerit06@gmail.com</span>
                 <span>Phone Number: +91-8076546579</span>
+                <span class="contact-img">
+                    <a href="https://github.com/PreritS-creator/"><img src="github-logo.png" alt="github-logo" class="github-logo"></a>
+                    <a href="https://www.linkedin.com/in/prerits1206/"><img src="linkedin-logo.png" alt="linkedin-logo" class="linkedin-logo"></a>
+                </span>
             </div>
         </div>
 
