--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
         <link href="styles.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="scripts.js"></script>
-        <title>My Webpage</title>
+        <title>Prerit</title>
 
     </head>
     <body>
@@ -40,19 +40,22 @@
 
         <div class="slide-down">
             <h1>My Projects</h1>
-            <div>&#8205;</div>
             <div class="projects">Personal Webpage</div>
                 <div>
                     The website you are seeing right now. <br>
-                    Used HTML, CSS, Javascript to create <br>
-                    a multiple page inter-linked website. <br>
-                    Used JQuery for efficient coding and  <br>
-                    made the site interactive, and easy on <br>
-                    the eyes, meanwhile gained a huge amount <br>
-                    of experience on problem solving, and <br>
-                    web development, in general.
+                    Used HTML and CSS to create a multiple <br>
+                    page inter-linked website. Used flexbox <br>
+                    and bootstrap to create my portfolio website <br>
+                    that is easy on the eyes and looks good. <br>
+                    Gained huge experience in problem solving <br>
+                    and web development, in general.<br>
                 </div>
-            </div>
+            <div class="projects">Basic ML function scripts</div>
+                <div>
+                    Used pandas and numpy library in python to create <br>
+                    to create basic machine learning scripts, namely <br>
+                    One hot encoder, ordinal encoder, simple imputer <br>
+                </div>
         </div>
     </body>
 </html>
