--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
-        <title>My Webpage</title>
+        <title>Prerit</title>
     </head>
     <body>
         <nav class="navbar navbar-expand navbar-dark">
@@ -24,10 +24,13 @@
                                 <a class="nav-link" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
+                                <a class="nav-link" href="projects.html">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="projects.html">Projects</a>
+                                <a class="nav-link" href="education.html">Education</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                     </div>
                 </div>
@@ -35,15 +38,16 @@
         </nav>
 
         <div class="container">
+            
             <div class="welcome-text">
                 <span class="line1">Heyy, </span>
                 <span class="line1">I am Prerit Sharma!</span>
                 <span class="line2">An Aspiring Developer, looking to create Waves in this Field!</span>
+                <a href="about.html"><button class="contact-btn">About Me</button></a>  
             </div>
-            <a href="about.html">
-                <button class="contact-btn">About Me</button>
-            </a>
-
+            <div>
+                <img src="photo.jpg" alt="Personal Photo" class="personal">
+            </div>
         </div>
     </body>
 </html>
