--- a/contact.html
+++ b/contact.html
@@ -22,16 +22,19 @@
                     <div class="navbar-nav ms-auto">
                         <ul class="navbar-nav mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Contact</a>
+                                <a class="nav-link" href="projects.html">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="projects.html">Projects</a>
+                                <a class="nav-link" href="education.html">Education</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Contact</a>
                             </li>
                     </div>
                 </div>
