--- a/about.html
+++ b/about.html
@@ -56,10 +56,14 @@
             <div>
                 <div>
                     <a href="projects.html">
-                        <button class="contact2-btn">My Projects</button>
+                        <button class="contact2-btn">Projects</button>
                     </a>
                 </div>
-                &#8205; &#8205;
+                <div>
+                    <a href="education.html">
+                        <button class="contact2-btn">Education &amp; skills</button>
+                    </a>
+                </div>
                 <div>
                     <a href="contact.html">
                         <button class="contact2-btn">Contact Me</button>
